cmake_minimum_required(VERSION 3.11)
project(hello)
if(UNIX)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
endif()
#set(CMAKE_C_FLAGS "-std=gnu11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
if(UNIX)
	set(THREADS_PREFER_PTHREAD_FLAG ON)
	find_package(Threads REQUIRED)
endif()
file(GLOB_RECURSE SRC_LIST "src/*.cpp" "src/*.h")
add_executable(hello ${SRC_LIST})
if(UNIX)
	target_link_libraries(hello PUBLIC Threads::Threads)
endif()